[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["contralearn"]

[project]
name = "contralearn"
version = "0.0.1"
description = "Contrastive representation learning"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["contrastive learning", "triplet loss"]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "lightning",
    "tensorboard"
]

[project.optional-dependencies]
interactive = [
    "matplotlib",
    "notebook"
]

[project.urls]
source = "https://github.com/joseph-nagel/contrastive-learning"

