[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["contralearn"]

[project]
name = "contralearn"
version = "0.0.1"
description = "Contrastive representation learning"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["contrastive learning", "triplet loss"]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "lightning",
    "tensorboard",
    "matplotlib",
    "notebook"
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[project.urls]
source = "https://github.com/joseph-nagel/contrastive-learning"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501"]  # include line-length violations that would be ignored otherwise (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # do not collapse multi-line collections with a trailing comma into a single line
